# freastal

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
freastal/: __init__.py  _asgi_protocol.py
freastal/src/: asgi.c  asgi.h  freastalmodule.c  server.c  server.h  tls.c  tls.h  wsgi.c  wsgi.h
scripts/: build_vendor.sh
tests/: conftest.py  test_asgi.py  test_server.py  test_wsgi.py
