[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freastal"
version = "0.0.1"
description = "Fast libuv + picohttpparser WSGI/ASGI server (Irish: freastal — service)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

[tool.setuptools.packages.find]
include = ["freastal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.cibuildwheel]
# Build for CPython 3.10+ only; skip PyPy and 32-bit
build = "cp3{10,11,12,13,14}-*"
skip = "*-win32 *-musllinux* pp*"

# Install libuv from source before building the wheel.
# picotls and picohttpparser are vendored — no extra deps needed.
before-all = [
    "curl -fsSL https://github.com/libuv/libuv/archive/refs/tags/v1.52.1.tar.gz | tar xz",
    "cmake -S libuv-1.52.1 -B libuv-1.52.1/build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=/usr/local",
    "cmake --build libuv-1.52.1/build -j$(nproc || sysctl -n hw.logicalcpu)",
    "cmake --install libuv-1.52.1/build",
]

[tool.cibuildwheel.linux]
# manylinux2014 has OpenSSL 1.1; use manylinux_2_28 for OpenSSL 3
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = [
    # Install OpenSSL dev headers (manylinux_2_28 = AlmaLinux 8)
    "dnf install -y openssl-devel liburing-devel || yum install -y openssl-devel",
    "curl -fsSL https://github.com/libuv/libuv/archive/refs/tags/v1.52.1.tar.gz | tar xz",
    "cmake -S libuv-1.52.1 -B libuv-1.52.1/build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DLIBUV_BUILD_SHARED=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=/usr/local",
    "cmake --build libuv-1.52.1/build -j$(nproc)",
    "cmake --install libuv-1.52.1/build",
    "bash scripts/build_vendor.sh",
]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.macos]
before-all = [
    "brew install openssl@3",
    "curl -fsSL https://github.com/libuv/libuv/archive/refs/tags/v1.52.1.tar.gz | tar xz",
    "cmake -S libuv-1.52.1 -B libuv-1.52.1/build -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=OFF -DCMAKE_POSITION_INDEPENDENT_CODE=ON -DCMAKE_INSTALL_PREFIX=/usr/local",
    "cmake --build libuv-1.52.1/build -j$(sysctl -n hw.logicalcpu)",
    "sudo cmake --install libuv-1.52.1/build",
]
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}"
